--- a/src/components/CurrencyConverter.module.scss
+++ b/src/components/CurrencyConverter.module.scss
@@ -4,37 +4,13 @@
   justify-content: space-between;
   flex-wrap: wrap;
 
-  padding-top: 30px;
+  padding-top: 50px;
 
   font-size: 16px;
   word-break: break-all;
 
-  @media (max-width: 750px) {
+  @media (max-width: 765px) {
     flex-direction: column;
-  }
-
-  @media (min-width: 750px) {
-    flex-direction: row;
-  }
-
-  .currencyContainer {
-    padding: 40px 14px;
-    background-color: white;
-    border-radius: 5px;
-    width: 40%;
-
-    &__bottomRow {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 100%;
-      margin-top: 20px;
-    }
-
-    input {
-      width: 50%;
-      padding: 5px;
-    }
   }
 
   button {
@@ -49,3 +25,5 @@
     }
   }
 }
+
+.reversed {}
